force-app/main/default/objects/Airport_Code__c/Airport_Code__c.object-meta.xml
<CustomObject>
    <description>To capture the Airport Code</description>
    <label>Airport Code</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Airport Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airport Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>