force-app/main/default/objects/Airport_Code__c/fields/Freight_Airport_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_Airport_Country_Code__c</fullName>
    <description>Freight - records the country code of the Port</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>