force-app/main/default/objects/Airport_Code__c/fields/Freight_Airport_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Freight_Airport_Country_Name__c</fullName>
    <description>Freight - records the country name of the Port</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>