force-app/main/default/objects/Airport_Code__c/fields/Freight_Airport_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Freight_Airport_State_Code__c</fullName>
    <description>Freight - records the state code of the Port</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport State Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>