force-app/main/default/objects/Airport_Code__c/fields/Freight_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>Freight_Station_Name__c</fullName>
    <description>Freight - Capture the name of the Stations</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Airport City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>