force-app/main/default/objects/Airport_Code__c/fields/QF_Freight_Presence__c.field-meta.xml
<CustomField>
    <fullName>QF_Freight_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Freight - indicates whether Qantas Freight has a presence at this port</description>
    <label>QF Freight Presence</label>
    <type>Checkbox</type>
</CustomField>