force-app/main/default/objects/Airport_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Freight_Station_Name__c</columns>
    <columns>Freight_Airport_State_Code__c</columns>
    <columns>Freight_Airport_Country_Name__c</columns>
    <columns>Freight_Airport_Country_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>QF_Freight_Presence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>