force-app/main/default/objects/Airport_Code__c/listViews/All_Australia.listView-meta.xml
<ListView>
    <fullName>All_Australia</fullName>
    <columns>NAME</columns>
    <columns>Freight_Station_Name__c</columns>
    <columns>Freight_Airport_State_Code__c</columns>
    <columns>Freight_Airport_Country_Name__c</columns>
    <columns>Freight_Airport_Country_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Freight_Airport_Country_Code__c</field>
        <operation>equals</operation>
        <value>AU</value>
    </filters>
    <label>All Australia</label>
</ListView>