force-app/main/default/objects/Airport_Code__c/listViews/All_Freight_Airport_Codes.listView-meta.xml
<ListView>
    <fullName>All_Freight_Airport_Codes</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Freight_Station_Name__c</columns>
    <columns>Freight_Airport_State_Code__c</columns>
    <columns>Freight_Airport_Country_Name__c</columns>
    <columns>Freight_Airport_Country_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>QF_Freight_Presence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QF_Freight_Presence__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All  Freight Airport Codes</label>
</ListView>